# web3-mcp

./: .gitignore  .gitmodules  pyproject.toml
.github/workflows/: test.yml
scripts/: all_tools.py  ankr_direct_test.py  ankr_sdk_sync_test.py  get_currencies.py  get_nft_holders.py  get_nfts_by_owner.py  get_token_price.py  get_transactions_by_address.py  get_transactions_by_hash.py  mcp_protocol.py
src/web3_mcp/: __main__.py  auth.py  constants.py  server.py  utils.py
src/web3_mcp/api/: nft.py  query.py  token.py
